# LeanZX

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN_DECISIONS.md  IDEAS.md  LeanZX.lean  Main.lean  README.md  Tests.lean  ZxLean.lean  biome.json  lake-manifest.json  lakefile.lean  lakefile.toml
.github/workflows/: ci.yml
Demos/: Teleportation.lean
LeanSpider/: All.lean  Axioms.lean  Examples.lean  Tactics.lean  Visualize.lean  ZXDiagram.lean
LeanSpider/DerivedRules/: PiPi.lean
LeanSpider/Rules/: ColourChange.lean  EulerDecomp.lean  HadamardHadamard.lean  IdentityInsertion.lean  IdentityRemoval.lean  PiCopy.lean  SpiderFusion.lean  SpiderUnfusion.lean
LeanZX/: All.lean  Axioms.lean  Tactics.lean  Visualize.lean  ZXDiagram.lean
LeanZX/Rules/: ColourChange.lean  SpiderFusion.lean
Tests/: All.lean  ColourChange.lean  EulerDecomp.lean  HadamardHadamard.lean  IdentityRemoval.lean  Normalization.lean  PiCopy.lean  SpiderFusion.lean  SpiderUnfusion.lean
ZxLean/: Axioms.lean  Examples.lean  Tactics.lean  Visualize.lean  ZXCalculus.lean  ZXDiagram.lean
ZxLean/Rules/: HadamardHadamard.lean  IdentityRemoval.lean  SpiderFusion.lean
pyzx_daemon/: app.py  pyproject.toml
pyzx_daemon/lib/: lean_to_pyzx.py  pyzx_to_img.py  types.py
widget/src/: zxDiagram.tsx
zx_view_widget/: README.md  package-lock.json  package.json  pyproject.toml  rollup.config.js  tsconfig.json  vitest.config.ts
zx_view_widget/src/: pyodide-bundled.d.ts  raw-assets.d.ts  zxDiagram.tsx  zxRender.py  zxRender.ts  zxViewer.js
zx_view_widget/src/__tests__/: zxDiagram.test.tsx
