[project]
name = "zx-view-widget"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = []

# These dependency groups are read at JS build time by the rollup plugin.
# pyodide-load: pre-compiled pyodide packages, loaded via pyodide.loadPackage()
# pyodide-micropip: pure-Python PyPI packages, installed via micropip.install(deps=False)
# uv sync installs both groups locally for intellisense.
[dependency-groups]
pyodide-load = ["numpy", "networkx", "matplotlib", "typing-extensions", "tqdm"]
pyodide-micropip = ["lark==1.3.1", "pyperclip==1.11.0", "pyzx==0.10.0"]
dev = [
    {include-group = "pyodide-load"},
    {include-group = "pyodide-micropip"},
]

[tool.ruff]
line-length = 160
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM108", # ternary operator (can reduce readability)
]
